first commit of roottraceai