@@ -69,7 +69,7 @@ public class GlobalExceptionHandler {
     @ExceptionHandler(MethodArgumentTypeMismatchException.class)
     public ResponseEntity<ErrorResponse> handleTypeMismatch(MethodArgumentTypeMismatchException ex,
                                                              HttpServletRequest request) {
-        String message = String.format("Invalid value '%s' for parameter '%s'",
+        String message = "Invalid value '%s' for parameter '%s'".formatted(
                 ex.getValue(), ex.getName());
         ErrorResponse body = ErrorResponse.of(
                 HttpStatus.BAD_REQUEST.value(),
